tests/reject/bad_expr.ul
void main() {
     if (x = 1) {
        ;
     }
}